.provarCaches/00D5h000009Q6XQEA0/objects/Board_Section_Item__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LikeCount__c</fullName>
        <label>LikeCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <referenceTo>Board_Section__c</referenceTo>
        <relationshipLabel>Board Section Items</relationshipLabel>
        <relationshipName>Board_Section_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Board Section Item</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Board Section Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Board Section Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>